--- a/sql_cycling_portfolio.ipynb
+++ b/sql_cycling_portfolio.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "following-natural",
+   "id": "distant-court",
    "metadata": {},
    "source": [
+    "# Cycling Collisions in California #\n",
+    "\n",
+    "In this project, I use Jupyter Notebooks and SQLite to analyze traffic collisions in California involving at least one bicycle.\n",
+    "\n",
+    "The data has been requested and cleaned by Alex Gude and uploaded to Kaggle. The original data comes from the California Highway Patrol and covers collisions from January 1st, 2001 until mid-October, 2020.\n",
+    "\n",
     "## Setting up SQL interface with Jupyter Lab ##"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "decent-potato",
+   "id": "peripheral-excess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solid-domestic",
+   "id": "welsh-pontiac",
    "metadata": {},
    "source": [
     "Data source:\n",
@@ -30,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reasonable-crisis",
+   "id": "agricultural-armenia",
    "metadata": {},
    "source": [
     "Loading the files:"
@@ -39,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "excellent-falls",
+   "id": "violent-reading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-tribute",
+   "id": "historical-understanding",
    "metadata": {},
    "source": [
     "## Exploring the data ##"
@@ -56,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retained-jenny",
+   "id": "existing-hospital",
    "metadata": {},
    "source": [
     "View variables in the collisions and parties tables"
@@ -65,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "generous-software",
+   "id": "spare-charger",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "prerequisite-brazilian",
+   "id": "informational-trading",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-highland",
+   "id": "beneficial-rubber",
    "metadata": {},
    "source": [
     "How many cyclist crashes happen each year?"
@@ -1097,7 +1103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continental-camera",
+   "id": "offensive-dublin",
    "metadata": {},
    "source": [
     "What percentage of cycling collisions resulted in injury or fatality by year?"
@@ -1106,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "actual-porter",
+   "id": "current-singapore",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatty-satellite",
+   "id": "spectacular-radiation",
    "metadata": {},
    "source": [
     "The deadliest year for bicycle collisions (in terms of the rate of fatalities) was 2018. Most collisions (> 90%) result in injury, but that's likely due to bias of the dataset. The police are more likely to be notified when accidents are more severe.\n",
@@ -1301,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "intimate-arthur",
+   "id": "novel-begin",
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "located-infection",
+   "id": "informative-cancellation",
    "metadata": {},
    "source": [
     "Compare totals for collisions and parties tables"
@@ -1382,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "every-enhancement",
+   "id": "substantial-analysis",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-bearing",
+   "id": "senior-pendant",
    "metadata": {},
    "source": [
     "Since the number of bicycle collisions is less than the number of parties involving bicyclists, it seems like over 4,000 collisions since 2001 involved more than one cyclist.\n",
@@ -1437,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "finnish-passage",
+   "id": "daily-rocket",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bibliographic-mathematics",
+   "id": "surprised-rally",
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bored-planner",
+   "id": "opening-daniel",
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "shaped-still",
+   "id": "several-choice",
    "metadata": {},
    "source": [
     "On what days of the week do most bicycle collisions occur?"
@@ -2029,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bibliographic-burlington",
+   "id": "homeless-lunch",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "communist-qatar",
+   "id": "regulation-projection",
    "metadata": {},
    "source": [
     "More collisions occur in the middle of the week, perhaps because more people are out on the road then.\n",
@@ -2121,7 +2127,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "antique-wrestling",
+   "id": "understood-blind",
    "metadata": {},
    "outputs": [
     {
@@ -2232,7 +2238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-legend",
+   "id": "mediterranean-maximum",
    "metadata": {},
    "source": [
     "What types of weather conditions correlate with collisions involving bicycles?"
@@ -2241,7 +2247,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "legitimate-settlement",
+   "id": "beneficial-employment",
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "under-morris",
+   "id": "federal-cooking",
    "metadata": {},
    "source": [
     "Unsurprisingly, the fewest accidents occur on snowy days, probably because fewer people are cycling then. Similarly, more people are out on clear days and in warmer months, increasing the chances of collision.\n",
@@ -2334,7 +2340,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "assured-woman",
+   "id": "empty-sauce",
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stable-frontier",
+   "id": "promising-jefferson",
    "metadata": {},
    "source": [
     "In total:"
@@ -2529,7 +2535,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "printable-subdivision",
+   "id": "retained-steering",
    "metadata": {},
    "outputs": [
     {
@@ -2578,12 +2584,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annual-sigma",
+   "id": "specified-subscriber",
    "metadata": {},
    "source": [
     "Interestingly, cyclists seem to be at fault more than half of the time.\n",
     "\n",
-    "Could this be because cyclists are more often reckless? Or perhaps because they are more often too injured to give their perspective in police reports?\n",
+    "Could this be because cyclists are more often reckless? Or perhaps because they are more often too injured to give their perspective in police reports? The data doesn't provide info on who filed reports, but we can look at the categories of collision types as well as what kind of injuries at fault cyclists sustained.\n",
     "\n",
     "What kinds of injuries are reported on collisions involving bicycles?\n",
     "What type of collision occurred?\n",
@@ -2593,7 +2599,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "scientific-rebecca",
+   "id": "hungarian-aggregate",
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2696,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ruled-unemployment",
+   "id": "celtic-arthritis",
    "metadata": {},
    "outputs": [
     {
@@ -2737,7 +2743,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "small-thumbnail",
+   "id": "secret-spirituality",
    "metadata": {},
    "outputs": [
     {
@@ -2836,14 +2842,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complicated-hopkins",
+   "id": "polished-subsection",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "latin-performance",
+   "id": "plastic-aspect",
    "metadata": {},
    "source": [
     "**Oustanding questions**\n",
